fix color contrast

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
   line-height: 1.5;
   font-weight: 400;
 
-  --color-primary: #10c391;
+  --color-primary: #2c8166;
 }
